--- a/mycontacts-backend/package.json
+++ b/mycontacts-backend/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
