--- a/mycontacts-backend/package.json
+++ b/mycontacts-backend/package.json
@@ -11,9 +11,11 @@
   "author": "YASH SUTHAR",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2"
   },
   "devDependencies": {
